--- a/main.css
+++ b/main.css
@@ -54,6 +54,7 @@
 .cta-button:hover {
   background-color: #0056b3;
 }
+.cta-button:active{transform: translateY(4px);}
 .cta-button.secondary {
   background-color: #333;
 }
@@ -113,6 +114,7 @@
 .contact-icons img {
   width: 48px;
 }
+.contact-icons img:active{transform: translateY(4px);}
 @media only screen and (max-width: 768px) {
   .hero-content {
       flex-direction: column;
